--- a/war/version.html
+++ b/war/version.html
@@ -57,11 +57,13 @@
                 <h4>2.2.0 (snapshot)</h4>
                 <p>
                   <ul>
-                    <li>Background planboard sync (100 seconds interval) <i class="text-info">13-5-2013</i></li>
+                    <li>Hotfix for stability issues in profile timeline <i class="text-info">15-5-2013</i></li>
+                    <li>Hotfix for not displaying user information on profile editing form <i class="text-info">15-5-2013</i></li>
+                    <li>Background planboard sync (100T seconds interval) <i class="text-info">13-5-2013</i></li>
                     <li>Message job scheduler <i class="text-info">13-5-2013</i></li>
                     <li>IE 8/9/10 planboard stabilization <i class="text-info">13-5-2013</i></li>
                     <li>Hotfix for not going further than 6th page in pagination in messages <i class="text-info">4-5-2013</i></li>
-                    <li>Deployed for 100, 110, 120 and 130 <i class="text-info">3-5-2013</i></li>
+                    <li>Deployed for 100T, 110K, 120G and 130B <i class="text-info">3-5-2013</i></li>
                   </ul>
                 </p>
                 <h4>2.1.0</h4>
@@ -81,7 +83,7 @@
                 <h4>2.0.2</h4>
                 <p>
                   <ul>
-                    <li>Deployed for 110 <i class="text-info">17-4-2013</i></li>
+                    <li>Deployed for 110K <i class="text-info">17-4-2013</i></li>
                     <li>Core modules seperated <i class="text-info">17-4-2013</i></li>
                     <li>Background syncing for every minute and displaying webkit desktop notification for new messages <span class="text-warning">(still in development, temporarily disabled)</span> <i class="text-info">16-4-2013</i></li>
                     <li>By adding a new slot, slot form now opens with time of now and 1 hour later <i class="text-info">15-4-2013</i></li>
@@ -114,7 +116,7 @@
                 <h4>2.0.0</h4>
                 <p>
                   <ul>
-                    <li>Deplyoyed for 100, 110, 120, 130 <i class="text-info">3-4-2013</i></li>
+                    <li>Deplyoyed for 100T, 110K, 120G, 130B <i class="text-info">3-4-2013</i></li>
                   </ul>
                 </p>
               </div>
