--- a/war/version.html
+++ b/war/version.html
@@ -42,7 +42,7 @@
         <section id="versions">
           <div class="container-narrow">
             <div class="masthead">
-              <h4 class="pull-right"><span class="muted">Current version:</span> v2.2.0</h4>
+              <h4 class="pull-right"><span class="muted">Current version:</span> v2.3.0</h4>
               <h3 class="muted">Change Log</h3>
             </div>
             <hr>
@@ -54,6 +54,12 @@
             <hr>
             <div class="row-fluid marketing">
               <div class="span12">
+                <h4>2.3.0</h4>
+                <p>
+                  <ul>
+                    <li>Deployed for 100T, 110K, 120G and 130B <i class="text-info">16-5-2013</i></li>
+                  </ul>
+                </p>
                 <h4>2.2.0</h4>
                 <p>
                   <ul>
