demo users added on gvrb

--- a/war/version.html
+++ b/war/version.html
@@ -42,7 +42,7 @@
         <section id="versions">
           <div class="container-narrow">
             <div class="masthead">
-              <h4 class="pull-right"><span class="muted">Current version:</span> v2.3.0</h4>
+              <h4 class="pull-right"><span class="muted">Current version:</span> v2.2.0</h4>
               <h3 class="muted">Change Log</h3>
             </div>
             <hr>
@@ -54,18 +54,12 @@
             <hr>
             <div class="row-fluid marketing">
               <div class="span12">
-                <h4>2.3.0</h4>
-                <p>
-                  <ul>
-                    <li>Deployed for 100T, 110K, 120G and 130B <i class="text-info">16-5-2013</i></li>
-                  </ul>
-                </p>
                 <h4>2.2.0</h4>
                 <p>
                   <ul>
                     <li>Hotfix for stability issues in profile timeline <i class="text-info">15-5-2013</i></li>
                     <li>Hotfix for not displaying user information on profile editing form <i class="text-info">15-5-2013</i></li>
-                    <li>Background planboard sync (100T seconds interval) <i class="text-info">13-5-2013</i></li>
+                    <li>Background planboard sync (60 seconds interval) <i class="text-info">13-5-2013</i></li>
                     <li>Message job scheduler <i class="text-info">13-5-2013</i></li>
                     <li>IE 8/9/10 planboard stabilization <i class="text-info">13-5-2013</i></li>
                     <li>Hotfix for not going further than 6th page in pagination in messages <i class="text-info">4-5-2013</i></li>
