download app button functionality is in place

--- a/war/version.html
+++ b/war/version.html
@@ -30,7 +30,7 @@
     <link rel="stylesheet" href="dist/app.css">
     
     <!-- compability tests and css fixers -->
-    <script src="js/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
+    <script src="libs/prefixfree/1.0.7/prefixfree.min.js"></script>
     
   </head>
   <body>
@@ -135,7 +135,7 @@
     <!-- end wrap -->
 
     <!-- bootstrap -->
-    <script src="js/libs/bootstrap/bootstrap.js"></script>
+    <script src="libs/bootstrap/bootstrap.js"></script>
 
     <script type="text/javascript">
       var _gaq = _gaq || [];
