--- a/war/version.html
+++ b/war/version.html
@@ -57,6 +57,7 @@
                 <h4>2.3.0</h4>
                 <p>
                   <ul>
+                    <li>Download mobile app functionality <i class="text-info">4-6-2013</i></li>
                     <li>Deployed for 100T, 110K, 120G and 130B <i class="text-info">16-5-2013</i></li>
                   </ul>
                 </p>
