planboard -> agenda in localization

--- a/war/index.html
+++ b/war/index.html
@@ -89,7 +89,7 @@
                 <a href="#dashboard">Dashboard</a>
               </li>
               <li data-match-route="/planboard">
-                <a href="#planboard">Planboard</a>
+                <a href="#planboard">Agenda</a>
               </li>
               <li data-match-route="/messages">
                 <a href="#messages">{{ui.message.messages}}
