flexibility in download location of app based on the profile

--- a/war/mail/mobile_app.html
+++ b/war/mail/mobile_app.html
@@ -150,7 +150,7 @@
               <h4>Android</h4>
               
               <h5>Stap 1:</h5>
-              <p>Download de app via <a href="http://test.ask-webpaige.appspot.com/profiles/test/app/knrm-paige.apk">deze link</a>.</p>
+              <p>Download de app via <a href="__download_link__">deze link</a>.</p>
               <!-- <img src="../img/mail/and_step_1.png"> -->
               
               <h5>Stap 2:</h5>
