--- a/war/index.html
+++ b/war/index.html
@@ -31,7 +31,7 @@
     <script src="dist/plugins.min.js"></script>
 
     <!-- profile configs -->
-    <script src="profiles/gvrb/profile.js"></script>
+    <script src="profiles/isparaat/profile.js"></script>
 
     <!--[if IE]><link rel="stylesheet" href="css/ie.css"><![endif]-->
     <!--[if IE 8]><link rel="stylesheet" href="css/ie8.css"><![endif]-->
