profile based google analytics

--- a/war/index.html
+++ b/war/index.html
@@ -31,7 +31,7 @@
     <script src="dist/plugins.min.js"></script>
 
     <!-- profile configs -->
-    <script src="profiles/isparaat/profile.js"></script>
+    <script src="profiles/gvrb/profile.js"></script>
 
     <!--[if IE]><link rel="stylesheet" href="css/ie.css"><![endif]-->
     <!--[if IE 8]><link rel="stylesheet" href="css/ie8.css"><![endif]-->
@@ -268,23 +268,31 @@
     <!--<![endif]-->
 
     <script type="text/javascript">
-      var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', 'UA-36532309-1']);
-      _gaq.push(['_setDomainName', 'ask-cs.com']);
-      _gaq.push(['_setAllowLinker', true]);
-      _gaq.push(['_trackPageview']);
-      (function() {
-        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-      })();
+      /**
+       * Profile based analytics
+       */
+      if (window.profile.analytics.status)
+      {
+        var _gaq = _gaq || [];
+        _gaq.push(['_setAccount',     window.profile.analytics.ua]);
+        _gaq.push(['_setDomainName',  window.profile.analytics.domain]);
+        _gaq.push(['_setAllowLinker', true]);
+        _gaq.push(['_trackPageview']);
+        (function() {
+          var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+          ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+          var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+        })();
+      }
     </script>
     
-    <script>
+    <script type="text/javascript">
+      /**
+       * Livereload only on localhost
+       */
       if (location.host.split(':')[0] == 'localhost')
         document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>');
     </script>
     
-
   </body>
 </html>
