--- a/war/version.html
+++ b/war/version.html
@@ -42,7 +42,7 @@
         <section id="versions">
           <div class="container-narrow">
             <div class="masthead">
-              <h4 class="pull-right"><span class="muted">Current version:</span> v2.3.0</h4>
+              <h4 class="pull-right"><span class="muted">Current version:</span> v2.2.0</h4>
               <h3 class="muted">Change Log</h3>
             </div>
             <hr>
@@ -54,7 +54,7 @@
             <hr>
             <div class="row-fluid marketing">
               <div class="span12">
-                <h4>2.3.0</h4>
+                <!-- <h4>2.3.0</h4>
                 <p>
                   <ul>
                     <li>Percentage counter for members timeline in status bar<i class="text-info">5-6-2013</i></li>
@@ -63,10 +63,11 @@
                     <li>Download mobile app functionality <i class="text-info">4-6-2013</i></li>
                     <li>Deployed for 100T, 110K, 120G and 130B <i class="text-info">16-5-2013</i></li>
                   </ul>
-                </p>
+                </p> -->
                 <h4>2.2.0</h4>
                 <p>
                   <ul>
+                    <li>Hotfix for not clearing cache for users <i class="text-info">20-6-2013</i></li>
                     <li>Hotfix for stability issues in profile timeline <i class="text-info">15-5-2013</i></li>
                     <li>Hotfix for not displaying user information on profile editing form <i class="text-info">15-5-2013</i></li>
                     <li>Background planboard sync (60 seconds interval) <i class="text-info">13-5-2013</i></li>
