--- a/war/version.html
+++ b/war/version.html
@@ -42,7 +42,7 @@
         <section id="versions">
           <div class="container-narrow">
             <div class="masthead">
-              <h4 class="pull-right"><span class="muted">Current version:</span> v2.2.0</h4>
+              <h4 class="pull-right"><span class="muted">Current version:</span> v2.3.0</h4>
               <h3 class="muted">Change Log</h3>
             </div>
             <hr>
@@ -54,16 +54,19 @@
             <hr>
             <div class="row-fluid marketing">
               <div class="span12">
-                <!-- <h4>2.3.0</h4>
+                <h4>2.3.0</h4>
                 <p>
                   <ul>
-                    <li>Percentage counter for members timeline in status bar<i class="text-info">5-6-2013</i></li>
+                    <li>Deployed for 100T, 110K, 120G and 130B <i class="text-info">27-5-2013</i></li>
+                    <li>Always change a timeslot through slot form in planboard <i class="text-info">27-6-2013</i></li>
+                    <li>Planboard auto refresher is being blocked while working on planboard <i class="text-info">27-6-2013</i></li>
+                    <li>Percentage counter for members timeline in status bar <i class="text-info">5-6-2013</i></li>
                     <li>Live, 120G<i class="text-info">5-6-2013</i></li>
                     <li>Help & Support <i class="text-info">4-6-2013</i></li>
                     <li>Download mobile app functionality <i class="text-info">4-6-2013</i></li>
                     <li>Deployed for 100T, 110K, 120G and 130B <i class="text-info">16-5-2013</i></li>
                   </ul>
-                </p> -->
+                </p>
                 <h4>2.2.0</h4>
                 <p>
                   <ul>
