Planboard initial start is fixed to next 7 days

--- a/war/version.html
+++ b/war/version.html
@@ -57,7 +57,7 @@
                 <h4>2.4.0 (Snapshot)</h4>
                 <p>
                   <ul>
-                    <li> <i class="text-info"></i></li>
+                    <li>Planboard initial start is fixed to next 7 days <i class="text-info">1-7-2013</i></li>
                   </ul>
                 </p>
                 <h4>2.3.0</h4>
