Slot inital values by adding

--- a/war/version.html
+++ b/war/version.html
@@ -57,6 +57,9 @@
                 <h4>2.4.0 (Snapshot)</h4>
                 <p>
                   <ul>
+                    <li>Adjust slotform times when mutation planboard items <i class="text-info">1-7-2013</i></li>
+                    <li>Hotfix for auto-refresh kicks in  while mutating <i class="text-info">1-7-2013</i></li>
+                    <li>Remove slotform after planboard mutation <i class="text-info">1-7-2013</i></li>
                     <li>Hotfix for the bug for switching to 'today' when clicked on 'day' button in timeline navigation <i class="text-info">1-7-2013</i></li>
                     <li>Planboard initial start is fixed to next 7 days <i class="text-info">1-7-2013</i></li>
                   </ul>
