--- a/war/index.html
+++ b/war/index.html
@@ -259,6 +259,7 @@
 
     <!--[if gt IE 7]><!-->
     <script src="libs/date/1.0/date.min.js"></script>
+    <script src="libs/chaps/timeline/2.4.0/timeline_modified.js"></script>
     <script src="libs/angular/1.0.5/angular.min.js"></script>
     <script src="libs/angular/1.0.5/angular-resource.min.js"></script>
     <script src="libs/bootstrap/bootstrap.min.js"></script>
