adding timeslots in the past has been reviewed

--- a/war/version.html
+++ b/war/version.html
@@ -42,7 +42,7 @@
         <section id="versions">
           <div class="container-narrow">
             <div class="masthead">
-              <h4 class="pull-right"><span class="muted">Current version:</span> 2.4.0 (Snapshot)</h4>
+              <h4 class="pull-right"><span class="muted">Current version:</span> 2.3.1 (Snapshot)</h4>
               <h3 class="muted">Change Log</h3>
             </div>
             <hr>
@@ -54,9 +54,11 @@
             <hr>
             <div class="row-fluid marketing">
               <div class="span12">
-                <h4>2.4.0 (Snapshot)</h4>
+                <h4>2.3.1 (Snapshot)</h4>
                 <p>
                   <ul>
+                    <li>Show slotform feelds already filled with time and date when opening <i class="text-info">1-7-2013</i></li>
+                    <li>Adjust slotform times when mutation planboard items <i class="text-info">1-7-2013</i></li>
                     <li>Adjust slotform times when mutation planboard items <i class="text-info">1-7-2013</i></li>
                     <li>Hotfix for auto-refresh kicks in  while mutating <i class="text-info">1-7-2013</i></li>
                     <li>Remove slotform after planboard mutation <i class="text-info">1-7-2013</i></li>
