--- a/war/version.html
+++ b/war/version.html
@@ -57,7 +57,8 @@
                 <h4>2.3.1 (Snapshot)</h4>
                 <p>
                   <ul>
-                    <li>Adding timeslots in the past has been reviewed and blocked <i class="text-info">2-7-2013</i><</li>
+                    <li>Background syncing for p2000 alerts <i class="text-info">2-7-2013</i></li>
+                    <li>Adding timeslots in the past has been reviewed and blocked <i class="text-info">2-7-2013</i></li>
                     <li>Show slotform feelds already filled with time and date when opening <i class="text-info">1-7-2013</i></li>
                     <li>Adjust slotform times when mutation planboard items <i class="text-info">1-7-2013</i></li>
                     <li>Adjust slotform times when mutation planboard items <i class="text-info">1-7-2013</i></li>
