--- a/war/version.html
+++ b/war/version.html
@@ -58,15 +58,16 @@
                 <p>
                   <ul>
                     <li>Deployed for 100T, 110K, 120G and 130B <i class="text-info">3-7-2013</i></li>
+                    <li>Performance issues: Live instance (#25) <i class="text-info">28-6-2013</i></li>
+                    <li>Performance issues: Grouped calls for member timelines (#25) <i class="text-info">28-6-2013</i></li>
                     <li>Background syncing for p2000 alerts <i class="text-info">2-7-2013</i></li>
-                    <li>Adding timeslots in the past has been reviewed and blocked <i class="text-info">2-7-2013</i></li>
-                    <li>Show slotform feelds already filled with time and date when opening <i class="text-info">1-7-2013</i></li>
-                    <li>Adjust slotform times when mutation planboard items <i class="text-info">1-7-2013</i></li>
-                    <li>Adjust slotform times when mutation planboard items <i class="text-info">1-7-2013</i></li>
-                    <li>Hotfix for auto-refresh kicks in  while mutating <i class="text-info">1-7-2013</i></li>
-                    <li>Remove slotform after planboard mutation <i class="text-info">1-7-2013</i></li>
-                    <li>Hotfix for the bug for switching to 'today' when clicked on 'day' button in timeline navigation <i class="text-info">1-7-2013</i></li>
-                    <li>Planboard initial start is fixed to next 7 days <i class="text-info">1-7-2013</i></li>
+                    <li>Extreme mutations in the past has been reviewed and blocked <i class="text-info">2-7-2013</i></li>
+                    <li>Show slotform feelds already filled with time and date when opening (#2) <i class="text-info">1-7-2013</i></li>
+                    <li>Adjust slotform times when mutation planboard items (#37) <i class="text-info">1-7-2013</i></li>
+                    <li>Auto-refresh kicks in while mutating (#28) <i class="text-info">1-7-2013</i></li>
+                    <li>Remove slotform after planboard mutation (#36) <i class="text-info">1-7-2013</i></li>
+                    <li>Clicking today shows yesterday (#35) <i class="text-info">1-7-2013</i></li>
+                    <li>Set standard agenda view to today +6days (#30)<i class="text-info">1-7-2013</i></li>
                   </ul>
                 </p>
                 <h4>2.3.0</h4>
