issue numbers added to version list

--- a/war/version.html
+++ b/war/version.html
@@ -66,8 +66,8 @@
                     <li>Deployed for 100T, 110K, 120G and 130B <i class="text-info">3-7-2013</i></li>
                     <li>Performance issues: Live instance (#25) <i class="text-info">28-6-2013</i></li>
                     <li>Performance issues: Grouped calls for member timelines (#25) <i class="text-info">28-6-2013</i></li>
-                    <li>Background syncing for p2000 alerts <i class="text-info">2-7-2013</i></li>
-                    <li>Extreme mutations in the past has been reviewed and blocked <i class="text-info">2-7-2013</i></li>
+                    <li>Background syncing for P2000 alerts (#32) <i class="text-info">2-7-2013</i></li>
+                    <li>Extreme mutations in the past has been reviewed and blocked (#31) <i class="text-info">2-7-2013</i></li>
                     <li>Show slotform feelds already filled with time and date when opening (#2) <i class="text-info">1-7-2013</i></li>
                     <li>Adjust slotform times when mutation planboard items (#37) <i class="text-info">1-7-2013</i></li>
                     <li>Auto-refresh kicks in while mutating (#28) <i class="text-info">1-7-2013</i></li>
