--- a/war/version.html
+++ b/war/version.html
@@ -57,7 +57,8 @@
                 <h4>2.3.2</h4>
                 <p>
                   <ul>
-                    <li><!-- Deployed for 100T, 110K, 120G and 130B <i class="text-info">3-7-2013</i> --></li>
+                    <li>Deployed for 100T, 110K, 120G and 130B <i class="text-info">3-7-2013</i></li>
+                    <li>Hotfix for bug in changing view (e.g. jump back to week-view) after mutating planboard (#26/#3) <i class="text-info">3-7-2013</i></li>
                   </ul>
                 </p>
                 <h4>2.3.1</h4>
