--- a/war/version.html
+++ b/war/version.html
@@ -42,7 +42,7 @@
         <section id="versions">
           <div class="container-narrow">
             <div class="masthead">
-              <h4 class="pull-right"><span class="muted">Current version:</span> 2.3.1</h4>
+              <h4 class="pull-right"><span class="muted">Current version:</span> 2.3.2</h4>
               <h3 class="muted">Change Log</h3>
             </div>
             <hr>
@@ -54,6 +54,16 @@
             <hr>
             <div class="row-fluid marketing">
               <div class="span12">
+                <h4>2.3.2</h4>
+                <p>
+                  <ul>
+                    <li>Deployed for 100T, 110K, 120G and 130B <i class="text-info">8-7-2013</i></li>
+                    <li>Applying alphabetical sorting on receivers list when composing a message <i class="text-info">8-7-2013</i></li>
+                    <li>Internationalization updates with a focus on the Dutch language <i class="text-info">8-7-2013</i></li>
+                    <li>Major performance improvement when adding, modifying or deleting new timeslots (back-end improvement) <i class="text-info">8-7-2013</i></li>
+                    <li>Addressed a bug in the functionality of changing the availability of another team member <i class="text-info">8-7-2013</i></li>
+                  </ul>
+                </p>
                 <h4>2.3.1</h4>
                 <p>
                   <ul>
