fixed problem with not rendering profile timelines

--- a/war/index.html
+++ b/war/index.html
@@ -213,6 +213,9 @@
       <!-- container-fluid -->
       <div class="container-fluid">
         <div ng-view></div>
+
+        <!--indicator: {{timelineLoaded}}-->
+
       </div>
       <!-- end container-fluid -->
       <div id="push"></div>
