--- a/war/version.html
+++ b/war/version.html
@@ -10,7 +10,7 @@
 
     <title>WebPaige Versions</title>
     
-    <meta name="description" content="WebPaige v2.0.0">
+    <meta name="description" content="WebPaige">
     <meta name="viewport" content="width=device-width">
 
     <!-- jquery -->
@@ -57,7 +57,12 @@
                 <h4>2.3.3</h4>
                 <p>
                   <ul>
-                    <!-- <li>Deployed for 100T, 110K, 120G and 130B <i class="text-info">8-7-2013</i></li> -->
+                    <li>Deployed for 100T, 110K, 120G and 130B <i class="text-info">26-7-2013</i></li>
+                    <li>Improved translations (#33) <i class="text-info">12-7-2013</i></li>
+                    <li>Implement the moving of time-slots starting in the past and ending in the future by slicing
+                      them <i class="text-info">10-7-2013</i></li>
+                    <li>Enabling changing of group member passwords for planners <i class="text-info">9-7-2013</i></li>
+                    <li>Multiple IE bugs fix for library loading order issue <i class="text-info">9-7-2013</i></li>
                   </ul>
                 </p>
                 <h4>2.3.2</h4>
