--- a/war/version.html
+++ b/war/version.html
@@ -58,6 +58,8 @@
                 <p>
                   <ul>
                     <li>Deployed for 100T, 110K, 120G and 130B <i class="text-info">26-7-2013</i></li>
+                    <li>Fixed issues with IE8 (not displaying title and missing data in planboard) <i
+                        class="text-info">26-7-2013</i></li>
                     <li>Improved translations (#33) <i class="text-info">12-7-2013</i></li>
                     <li>Implement the moving of time-slots starting in the past and ending in the future by slicing
                       them <i class="text-info">10-7-2013</i></li>
