spreaded view on divisions for groups in timeline

--- a/war/index.html
+++ b/war/index.html
@@ -38,7 +38,7 @@
     
 
     <!-- profile configs -->
-    <script src="profiles/test/profile.js"></script>
+    <script src="profiles/knrm/profile.js"></script>
 
     <!--[if IE]><link rel="stylesheet" href="css/ie.css"><![endif]-->
     <!--[if IE 8]><link rel="stylesheet" href="css/ie8.css"><![endif]-->
