added new email templates for experimental download app option and extended current functionality

--- a/war/index.html
+++ b/war/index.html
@@ -263,7 +263,7 @@
                 </button>
               </li>
               <li>
-                <span class="muted" ng-style="(!config.profile.mobileApp.status) && 'right:0'">
+                <span class="muted">
                   <small>
                     Ask Community Systems, 2013<br><i>WebPaige <a href="version.html" target="_blank">v{{config.version}}</a></i>
                   </small>
