--- a/war/index.html
+++ b/war/index.html
@@ -259,7 +259,7 @@
                 <button class="btn btn-success btn-large"
                         type="button"
                         ng-click="downloadMobileApp('experimental')">
-                  Download Experimenteele App
+                  Download Experimentele App
                 </button>
               </li>
               <li>
@@ -276,11 +276,11 @@
         </div>
         <!-- end copyrights -->
 
-        <!-- general preloader -->
+        <!-- general pre-loader -->
         <p class="muted" ng-show="loading.status">
           <img src="img/ajax-loader.gif"><small><span ng-show="app.preloader.status">{{app.preloader.count}}% </span>{{loading.message}}</small>
         </p>
-        <!-- end general preloader -->
+        <!-- end general pre-loader -->
 
       </div>
     </div>
