sorting on lastnbame for agenda members, message receivers and groups&users listings

--- a/war/index.html
+++ b/war/index.html
@@ -265,7 +265,7 @@
               <li>
                 <span class="muted">
                   <small>
-                    Ask Community Systems, 2013<br><i>WebPaige <a href="version.html" target="_blank">v{{config.version}}</a></i>
+                    Ask Community Systems, 2013<br><i>WebPaige <a href="version.html" target="_blank" style="color: #dddddd;">v{{config.version}}</a></i>
                   </small>
                 </span>
               </li>
