--- a/war/version.html
+++ b/war/version.html
@@ -42,7 +42,7 @@
         <section id="versions">
           <div class="container-narrow">
             <div class="masthead">
-              <h4 class="pull-right"><span class="muted">Current version:</span> 2.3.4</h4>
+              <h4 class="pull-right"><span class="muted">Current version:</span> 2.3.5</h4>
               <h3 class="muted">Change Log</h3>
             </div>
             <hr>
@@ -54,6 +54,13 @@
             <hr>
             <div class="row-fluid marketing">
               <div class="span12">
+                <h4>2.3.5</h4>
+                <p>
+                <ul>
+                  <li>Sorting on last name in agenda, message receivers and groups&users listings <i class="text-info">26-8-2013</i></li>
+                  <li>Download exp. mobile app  <i class="text-info">23-8-2013</i></li>
+                </ul>
+                </p>
                 <h4>2.3.4</h4>
                 <p>
                 <ul>
