--- a/war/version.html
+++ b/war/version.html
@@ -57,8 +57,9 @@
                 <h4>2.3.5</h4>
                 <p>
                 <ul>
-                  <li>Sorting on last name in agenda, message receivers and groups&users listings <i class="text-info">26-8-2013</i></li>
-                  <li>Download exp. mobile app  <i class="text-info">23-8-2013</i></li>
+                  <li>Deployed for 100T, 110K, 120G and 130B <i class="text-info">26-8-2013</i></li>
+                  <li>Sorting on last name in agenda, message receivers and groups&users listings (#44) <i class="text-info">26-8-2013</i></li>
+                  <li>Added the possibility to download an experimental version of the app, with geofencing functionality <i class="text-info">23-8-2013</i></li>
                 </ul>
                 </p>
                 <h4>2.3.4</h4>
