bugfix for undefiend undefined names

--- a/war/version.html
+++ b/war/version.html
@@ -54,6 +54,12 @@
             <hr>
             <div class="row-fluid marketing">
               <div class="span12">
+                <h4>2.3.6 (Snapshot)</h4>
+                <p>
+                <ul>
+                  <li>Bug fix for 'undefined undefined' names <i class="text-info">9-10-2013</i></li>
+                </ul>
+                </p>
                 <h4>2.3.5</h4>
                 <p>
                 <ul>
