updated version numbers

--- a/war/version.html
+++ b/war/version.html
@@ -42,7 +42,7 @@
         <section id="versions">
           <div class="container-narrow">
             <div class="masthead">
-              <h4 class="pull-right"><span class="muted">Current version:</span> 2.3.5</h4>
+              <h4 class="pull-right"><span class="muted">Current version:</span> 2.3.6 (Snapshot)</h4>
               <h3 class="muted">Change Log</h3>
             </div>
             <hr>
