hotfix for undefined names & lowerCase user uuid by registering

--- a/war/version.html
+++ b/war/version.html
@@ -42,7 +42,7 @@
         <section id="versions">
           <div class="container-narrow">
             <div class="masthead">
-              <h4 class="pull-right"><span class="muted">Current version:</span> 2.3.6 (Snapshot)</h4>
+              <h4 class="pull-right"><span class="muted">Current version:</span> 2.3.6</h4>
               <h3 class="muted">Change Log</h3>
             </div>
             <hr>
@@ -54,10 +54,12 @@
             <hr>
             <div class="row-fluid marketing">
               <div class="span12">
-                <h4>2.3.6 (Snapshot)</h4>
+                <h4>2.3.6</h4>
                 <p>
                 <ul>
-                  <li>Bug fix for 'undefined undefined' names <i class="text-info">9-10-2013</i></li>
+                  <li>Deployed for 100T, 110K, 120G and 130B <i class="text-info">11-10-2013</i></li>
+                  <li>Bug fix for lower cased user names on registering <i class="text-info">11-10-2013</i></li>
+                  <li>Bug fix for re-setting name during the login <i class="text-info">9-10-2013</i></li>
                 </ul>
                 </p>
                 <h4>2.3.5</h4>
