some view disabling and user lost changes

--- a/war/index.html
+++ b/war/index.html
@@ -201,7 +201,7 @@
 
 
     <!-- notifications -->
-    <div id="notification" class="alert {{notification.type}}" ng-show="notification.status">
+    <div id="notification" class="alert {{notification.type}} ng-cloak" ng-show="notification.status">
       <button type="button" class="close" ng-click="notification.status = false">&times;</button>
       {{notification.message}}
     </div>
