extended release items

--- a/war/version.html
+++ b/war/version.html
@@ -59,14 +59,15 @@
                   <ul>
                     <li>Fix for not correctly switching timeline navigational scope buttons (day-week-month).
                     Fix made in this week where the daylight time saving occurs so this fix will cover other
-                    daylight saving periods as well.<i class="text-info">25-10-2013</i></li>
-                    <li>Sorting alphabetically on search results<i class="text-info">24-10-2013</i></li>
-                    <li>Fix on not displaying receiver names on replying a message<i class="text-info">24-10-2013</i></li>
-                    <li>Fix on 'undefined' values by registering new users with empty phone fields.<i class="text-info">24-10-2013</i></li>
-                    <li>IOS7 corrections and enhancements targeting iPad users<i class="text-info">23-10-2013</i></li>
-                    <li>Fix on not displaying correct error message on wrong credential login attempts.<i class="text-info">21-10-2013</i></li>
-                    <li>Enhancement of forcing search results to refresh after adding user to an another group<i class="text-info">21-1-2013</i></li>
-                    <li>Enhancement of smart alarming functionality in the web application<i class="text-info">14-10-2013</i></li>
+                    daylight saving periods as well. <i class="text-info">25-10-2013</i></li>
+                    <li>Sorting alphabetically on search results. <i class="text-info">24-10-2013</i></li>
+                    <li>Fix on not displaying receiver names on replying a message. <i class="text-info">24-10-2013</i></li>
+                    <li>Fix on not displaying success message by removing multiple users from a group. <i class="text-info">24-10-2013</i></li>
+                    <li>Fix on 'undefined' values by registering new users with empty phone fields. <i class="text-info">24-10-2013</i></li>
+                    <li>IOS7 corrections and enhancements targeting iPad users. <i class="text-info">23-10-2013</i></li>
+                    <li>Fix on not displaying correct error message on wrong credential login attempts. <i class="text-info">21-10-2013</i></li>
+                    <li>Enhancement of forcing search results to refresh after adding user to an another group. <i class="text-info">21-1-2013</i></li>
+                    <li>Enhancement of smart alarming functionality in the web application. <i class="text-info">14-10-2013</i></li>
                   </ul>
                 </p>
                 <h4>2.3.6</h4>
