--- a/war/version.html
+++ b/war/version.html
@@ -42,7 +42,7 @@
         <section id="versions">
           <div class="container-narrow">
             <div class="masthead">
-              <h4 class="pull-right"><span class="muted">Current version:</span> 2.3.7 (Snapshot)</h4>
+              <h4 class="pull-right"><span class="muted">Current version:</span> 2.3.7</h4>
               <h3 class="muted">Change Log</h3>
             </div>
             <hr>
@@ -54,7 +54,7 @@
             <hr>
             <div class="row-fluid marketing">
               <div class="span12">
-                <h4>2.3.7 (Snapshot)</h4>
+                <h4>2.3.7</h4>
                 <p>
                   <ul>
                     <li>Fix for not correctly switching timeline navigational scope buttons (day-week-month).
