--- a/war/version.html
+++ b/war/version.html
@@ -42,7 +42,7 @@
         <section id="versions">
           <div class="container-narrow">
             <div class="masthead">
-              <h4 class="pull-right"><span class="muted">Current version:</span> 2.3.7</h4>
+              <h4 class="pull-right"><span class="muted">Current version:</span> 2.3.8</h4>
               <h3 class="muted">Change Log</h3>
             </div>
             <hr>
@@ -54,12 +54,18 @@
             <hr>
             <div class="row-fluid marketing">
               <div class="span12">
+                <h4>2.3.8</h4>
+                <p>
+                  <ul>
+                    <li><i class="text-info"></i></li>
+                  </ul>
+                </p>
                 <h4>2.3.7</h4>
                 <p>
                   <ul>
                     <li>Fix for not correctly switching timeline navigational scope buttons (day-week-month).
-                    Fix made in this week where the daylight time saving occurs so this fix will cover other
-                    daylight saving periods as well. <i class="text-info">25-10-2013</i></li>
+                      Fix made in this week where the daylight time saving occurs so this fix will cover other
+                      daylight saving periods as well. <i class="text-info">25-10-2013</i></li>
                     <li>Sorting alphabetically on search results. <i class="text-info">24-10-2013</i></li>
                     <li>Fix on not displaying receiver names on replying a message. <i class="text-info">24-10-2013</i></li>
                     <li>Fix on not displaying success message by removing multiple users from a group. <i class="text-info">24-10-2013</i></li>
