corrected google play store link

--- a/war/index.html
+++ b/war/index.html
@@ -234,11 +234,10 @@
          class="ng-cloak text-center">
       <ul style="list-style: none; position: relative; z-index: 20000; margin: 0;">
         <li style="display: inline;">
-          <button class="btn btn-success btn-large"
-                  type="button"
-                  href="https://play.google.com/store/apps/details?id=com.askcs.standby">
+          <a class="btn btn-success btn-large"
+             href="https://play.google.com/store/apps/details?id=com.askcs.standby">
             Download Android App
-          </button>
+          </a>
         </li>
         <br ng-show="browser.screen.width < 768" />
         <br ng-show="browser.screen.width < 768" />
@@ -274,11 +273,10 @@
           <div id="download-footer">
             <ul>
               <li ng-show="config.profile.mobileApp.status && config.profile.smartAlarm">
-                <button class="btn btn-success btn-large"
-                        type="button"
-                        href="https://play.google.com/store/apps/details?id=com.askcs.standby">
+                <a class="btn btn-success btn-large"
+                   href="https://play.google.com/store/apps/details?id=com.askcs.standby">
                   Download Android App
-                </button>
+                </a>
               </li>
               <li ng-show="config.profile.mobileApp.status && config.profile.smartAlarm">
                 <a class="btn btn-success btn-large"
