--- a/war/index.html
+++ b/war/index.html
@@ -10,8 +10,8 @@
 
     <title>{{config.profile.title}}</title>
     
-    <meta name="description" content="WebPaige v2">
-    <meta name="viewport" content="width=device-width">
+    <meta name="description"  content="WebPaige v2">
+    <meta name="viewport"     content="width=device-width">
     
     <!-- favicons -->
     <link rel="apple-touch-icon-precomposed" sizes="144x144" 
@@ -39,12 +39,12 @@
     <!-- profile configs -->
     <script src="profiles/standby/profile.js"></script>
 
-    <!--[if IE]><link rel="stylesheet" href="css/ie.css"><![endif]-->
-    <!--[if IE 8]><link rel="stylesheet" href="css/ie8.css"><![endif]-->
-    <!--[if lt IE 9]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
-    <!--[if gt IE 7]><script src="libs/angular-ui/0.4.0/angular-ui-ieshiv.min.js"></script><![endif]-->
+    <!--[if IE]>      <link rel="stylesheet" href="css/ie.css">                                  <![endif]-->
+    <!--[if IE 8]>    <link rel="stylesheet" href="css/ie8.css">                                 <![endif]-->
+    <!--[if lt IE 9]> <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script> <![endif]-->
+    <!--[if gt IE 7]> <script src="libs/angular-ui/0.4.0/angular-ui-ieshiv.min.js"></script>     <![endif]-->
 
-    <script src="libs/modernizr/2.6.2/modernizr-2.6.2.min.js"></script>
+    <!--<script src="libs/modernizr/2.6.2/modernizr-2.6.2.min.js"></script>-->
   </head>
   <body>
 
