--- a/war/version.html
+++ b/war/version.html
@@ -42,7 +42,7 @@
         <section id="versions">
           <div class="container-narrow">
             <div class="masthead">
-              <h4 class="pull-right"><span class="muted">Current version:</span> 2.3.8 (Snapshot)</h4>
+              <h4 class="pull-right"><span class="muted">Current version:</span> 2.3.8</h4>
               <h3 class="muted">Change Log</h3>
             </div>
             <hr>
@@ -57,7 +57,8 @@
                 <h4>2.3.8</h4>
                 <p>
                   <ul>
-                    <li><i class="text-info"></i></li>
+                    <li>Easy planning for later years <i class="text-info">20-11-2013</i></li>
+                    <li>Message broadcast buttons replaced with checkboxes (#51) <i class="text-info">19-11-2013</i></li>
                   </ul>
                 </p>
                 <h4>2.3.7</h4>
