--- a/war/index.html
+++ b/war/index.html
@@ -37,7 +37,7 @@
     <script src="dist/plugins.min.js"></script>
 
     <!-- profile configs -->
-    <script src="profiles/test/profile.js"></script>
+    <script src="profiles/monster/profile.js"></script>
 
     <!--[if IE]>      <link rel="stylesheet" href="css/ie.css">                                  <![endif]-->
     <!--[if IE 8]>    <link rel="stylesheet" href="css/ie8.css">                                 <![endif]-->
@@ -45,6 +45,7 @@
     <!--[if gt IE 7]> <script src="libs/angular-ui/0.4.0/angular-ui-ieshiv.min.js"></script>     <![endif]-->
 
     <!--<script src="libs/modernizr/2.6.2/modernizr-2.6.2.min.js"></script>-->
+
   </head>
   <body>
 
@@ -57,6 +58,8 @@
         backgroundRepeat: 'no-repeat'
       });
       if ($.browser.mobile) $('#watermark').css({ bottom: '-10px' });
+
+      $('#popupBtn').popover();
     </script>
     <!-- end watermark for app -->
 
@@ -226,7 +229,7 @@
     </div>
     <!-- end mobile status bar -->
 
-    <div ng-show="browser.mobile && config.profile.mobileApp.status && config.profile.smartAlarm"
+    <div ng-show="browser.mobile && config.profile.mobileApp.status && config.profile.smartAlarm && (config.profile.meta=='monster')"
          class="ng-cloak text-center">
       <ul style="list-style: none; position: relative; z-index: 20000; margin: 0;">
         <li style="display: inline;">
@@ -257,31 +260,47 @@
         <!-- copyrights -->
         <div id="copyrights">
 
-          <!-- ask & version -->
-          <!--<span class="muted" ng-style="(!config.profile.mobileApp.status) && 'right:0'">-->
-            <!--<small>-->
-              <!--Ask Community Systems, 2013<br><i>WebPaige <a href="version.html" target="_blank">v{{config.version}}</a></i>-->
-            <!--</small>-->
-          <!--</span>-->
-          <!-- end ask & version -->
-
           <!-- download mobile app -->
           <div id="download-footer">
             <ul>
-              <li ng-show="config.profile.mobileApp.status && config.profile.smartAlarm">
+
+              <!--Monster-->
+              <li ng-show="config.profile.mobileApp.status && (config.profile.meta == 'monster')">
                 <a class="btn btn-success btn-large"
                    href="https://play.google.com/store/apps/details?id=com.askcs.standby">
                   Download Android App
                 </a>
               </li>
-              <li ng-show="config.profile.mobileApp.status && config.profile.smartAlarm">
+              <li ng-show="config.profile.mobileApp.status && (config.profile.meta == 'monster')">
+                <a id="popupBtn" class="btn btn-success btn-large"
+                   data-toggle="popover"
+                   data-placement="top"
+                   data-content="Binnenkort te downloaden."
+                   title=""
+                   data-original-title="Download iPhone App"
+                   onclick="console.log($(this).popover())">Download iPhone App</a>
+              </li>
+              <!--end Monster-->
+
+              <!--StandBy Firedep-->
+              <li ng-show="config.profile.mobileApp.status && (config.profile.meta == 'standby')">
+                <a class="btn btn-success btn-large"
+                   href="https://play.google.com/store/apps/details?id=com.askcs.standby">
+                  Download Android App
+                </a>
+              </li>
+
+              <li ng-show="config.profile.mobileApp.status && (config.profile.meta == 'standby')">
                 <a class="btn btn-success btn-large"
                    href="https://itunes.apple.com/nl/app/standby/id655588325?mt=8&uo=4"
                    target="itunes_store">
                   Download iPhone App
                 </a>
               </li>
-              <li ng-show="config.profile.mobileApp.status && !config.profile.smartAlarm">
+              <!--end StandBy Firedep-->
+
+              <li ng-show="config.profile.mobileApp.status"
+                  ng-hide="(config.profile.meta == 'standby') || (config.profile.meta == 'monster')">
                 <button class="btn btn-success btn-large"
                         type="button"
                         ng-click="downloadMobileApp('regular')">
@@ -295,6 +314,7 @@
                   Download Experimentele App
                 </button>
               </li>
+
               <li>
                 <span class="muted">
                   <small>
@@ -332,14 +352,8 @@
 
     
     <script type="text/javascript">
-      /**
-       * Profile based analytics
-       */
       if (window.profile.analytics.status) window.profile.analytics.code();
 
-      /**
-       * Livereload only on localhost
-       */
       if (location.host.split(':')[0] == 'localhost')
         document.write(
             '<script src="http://' + 
